[package]
name = "epsilla"
version = "0.0.1"
edition = "2021"
authors = ["Epsilla Team <info@epsilla.com>"]
description = "Epsilla Rust SDK"
documentation = "https://epsilla-inc.gitbook.io/epsilladb"
homepage = "https://epsilla.com/"
license = "GPL-3.0"
repository = "https://github.com/epsilla-cloud/vectordb"
readme = "README.md"

[dependencies]
